# vision-camera-ocr-scanner

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  VisionCameraOcrScanner.podspec  eslint.config.mjs  jest.config.js  nitro.json  package.json  tsconfig.json
.claude/agents/: nitro-reviewer.md
.claude/skills/build-and-test-module/: SKILL.md
.claude/skills/consult-codex/: SKILL.md
.claude/skills/track-progress/: SKILL.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  docs.yml
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/jieonist/visioncameraocrscanner/: VisionCameraOcrScanner.kt  VisionCameraOcrScannerPackage.kt
docs/: index.md
docs/.vitepress/: config.mts
docs/guide/: business-card.md  card.md  flow.md  getting-started.md  mrz.md
docs/ko/: index.md
docs/ko/guide/: business-card.md  card.md  flow.md  getting-started.md  mrz.md
example/: Gemfile  app.json  babel.config.js  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/VisionCameraOcrScannerExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: VisionCameraOcrScanner.swift
src/: VisionCameraOcrScanner.nitro.ts  detectDocument.ts  index.tsx  multiply.native.tsx  multiply.tsx  parseBusinessCard.ts  parseCard.ts  parseMrz.ts  scanSession.ts
src/__tests__/: detectDocument.test.ts  parseBusinessCard.test.ts  parseCard.test.ts  parseMrz.test.ts  scanSession.test.ts
(+8 files in other folders)
